# echo-comment

./: .pre-commit-config.yaml  CHANGELOG.md  Cargo.toml  DEVELOPMENT.md  Justfile  README.md  hello.sh  script.sh  taplo.toml
.github/workflows/: CI.yml
examples/: example-comment-echo.sh  example-echo-comment-in-red.sh  example-echo-comment-with-shell-flags.sh  example-echo-comment.sh
src/: cli.rs  color.rs  comment_echo.rs  config.rs  echo_comment.rs  error.rs  lib.rs  main.rs  processor.rs  runner.rs
tests/: error.rs  integration.rs  integration_shebang.rs  processor.rs
