[package]
name = "echo-comment"
version = "0.1.0"
edition = "2024"
rust-version = "1.87"
description = "A bidirectional bash interpreter that converts comments ↔ echo statements"
license = "MIT OR Apache-2.0"
repository = "https://github.com/lmmx/comment-echo"
authors = ["Louis Maddox <louismmx@gmail.com>"]
keywords = ["bash", "shell", "automation", "scripting", "comments"]
categories = ["command-line-utilities", "development-tools"]
readme = "README.md"

[[bin]]
name = "comment-echo"
path = "src/comment_echo.rs"

[[bin]]
name = "echo-comment"
path = "src/echo_comment.rs"

[dependencies]
tempfile = "3.20"

[profile.release]
strip = true  # Remove debug symbols for smaller binaries
lto = true    # Link-time optimization
