[package]
authors = ["Louis Maddox <louismmx@gmail.com>"]
categories = ["command-line-utilities", "development-tools"]
description = "A bidirectional bash interpreter that converts comments ↔ echo statements"
edition = "2024"
keywords = ["automation", "bash", "comments", "scripting", "shell"]
license = "MIT OR Apache-2.0"
name = "echo-comment"
readme = "README.md"
repository = "https://github.com/lmmx/comment-echo"
rust-version = "1.87"
version = "0.1.0"

[[bin]]
name = "comment-echo"
path = "src/comment_echo.rs"

[[bin]]
name = "echo-comment"
path = "src/echo_comment.rs"

[dependencies]
tempfile = "3.20"

[profile.release]
lto = true   # Link-time optimization
strip = true # Remove debug symbols for smaller binaries
